added js folder

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,9 +3,14 @@
         <title>Our App</title>
         <link rel="stylesheet" type="text/css"
               href="{{ url_for('static', filename='css/style.css') }}">
+        <script data-main="scripts/main" src="web/scripts/require.js"></script>
+
     </head>
     <body>
       <h1>Welcome !!!!!</h1>
-    </body>
+
+      <div id="container"></div>
+</body>
+
 
 </html>
