--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #DFDFDF;
+    background-color: white;
 }
 .h1 {
     font-family: Helvetica;
@@ -9,4 +9,8 @@ body {
   margin: 20px;
   width: 200px;
   height: 200px;
+}
+.ldBar-label{
+  font-size: 24px;
+  font-family: monospace;
 }
