--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,9 +1,15 @@
 body {
     background-color: white;
+    font-family: monospace;
+    margin: 50px 40px;
 }
-.h1 {
-    font-family: Helvetica;
+h1 {
+    text-align: center;
     font-weight: bold;
+}
+.task_desc{
+    text-align: center;
+    margin-bottom: 50px;
 }
 #container {
   margin: 20px;
@@ -13,4 +19,17 @@ body {
 .ldBar-label{
   font-size: 24px;
   font-family: monospace;
+}
+.startWrapper{
+  text-align: center;
+}
+#start{
+  height: 50px;
+  width: 180px;
+  margin-top: 50px;
+  background: lightblue;
+  font-size: 18px;
+  font-family: monospace;
+  border: none;
+  border-radius: 10px;
 }
