--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,24 +7,34 @@
         href="{{ url_for('static', filename='css/loading-bar.css') }}">
         <script src="{{ url_for('static', filename='js/loading-bar.js') }}" language="JavaScript"></script>
         <script src="{{ url_for('static', filename='js/require.js') }}" language="JavaScript"></script>
+        <script>
+            
 
+            var progressCir = document.getElementById('progressCircle');
+            var dataVal = progressCir.getAttribute('data-value');
+
+            function getVal(){
+              //  progressCir.setAttribute('dataVal','40');
+              alert('hey!');
+            }
+        </script>
     </head>
     <body>
       <h1>Make a circle</h1>
-      <h3>Try and create a circle in 20 second or less</h3>
+      <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
-        <script>
-          var bar1 = new ldBar("#myItem1");
-          var bar2 = document.getElementById('myItem1').ldBar;
-          bar1.set(60);
-        </script>
         <div
           class="ldBar label-center"
           style="width:50%;height:50%;margin:auto"
-          data-value="60"
+          data-value="80"
           data-preset="circle"
           data-stroke="data:ldbar/res,gradient(0,1,#9df,#9fd,#df9,#fd9)"
         ></div>
+        <div class="startWrapper">
+          <button id="start" onclick="getVal()">Start Circle!</button>
+        </div>
+
+
 </body>
 
 
