--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -25,8 +25,12 @@
           console.log(json);
           console.log(json.orientation);
           if (json.orientation !== undefined) {
-           // document.getElementById("loadingBar").data-value = json.orientation;
+            document.getElementById("value2").setAttribute("data-value",json.orientation);
+            document.getElementById("value").innerHTML=json.orientation;
+	    var bar = document.getElementById("value2").ldBar;
+            bar.set(json.orientation);
           }
+
         });
         </script>
         <script>
@@ -39,16 +43,23 @@
     </head>
     <body>
       <h1>Make a circle</h1>
+	 <p
+	   id = "value"
+	 </p>
       <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
         <div
-	  id = "loadingBar"
+	  id = "value2"
           class="ldBar label-center"
           style="width:50%;height:50%;margin:auto"
-          data-value="50"
           data-preset="circle"
           data-stroke="data:ldbar/res,gradient(0,1,#9df,#9fd,#df9,#fd9)"
         ></div>
+	<script>
+		var bar1 = new ldBar("#value2");
+		var bar2 = document.getElementById('value2').ldBar;
+		bar1.set(bar2);
+	</script>
         <div class="startWrapper">
           <button id="start" onclick="getVal()">Start Circle!</button>
         </div>
