--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -46,7 +46,7 @@
       <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
         <div
-	        //id = "value2"
+	        id = "value2"
           class="ldBar label-center"
           style="width:50%;height:50%;margin:auto"
           data-preset="circle"
