--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -41,12 +41,12 @@
     <body>
       <h1>Make a circle</h1>
 	 <p
-	   id = "value"
+	   //id = "value"
 	 </p>
       <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
         <div
-	        //id = "value2"
+	        id = "value"
           class="ldBar label-center"
           style="width:50%;height:50%;margin:auto"
           data-preset="circle"
