Updated html index

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -25,9 +25,8 @@
           console.log(json);
           console.log(json.orientation);
           if (json.orientation !== undefined) {
-            document.getElementById("value2").setAttribute("data-value",json.orientation);
-            document.getElementById("value").innerHTML=json.orientation;
-	    var bar = document.getElementById("value").ldBar;
+            document.getElementById("value").setAttribute("data-value",json.orientation);
+	           var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
           }
         });
@@ -42,7 +41,7 @@
     <body>
       <h1>Make a circle</h1>
 	 <p
-	   id = "value"
+	   //id = "value"
 	 </p>
       <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
