Updated html index

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -26,7 +26,7 @@
           console.log(json.orientation);
           if (json.orientation !== undefined) {
             document.getElementById("value").setAttribute("data-value",json.orientation);
-	           var bar = document.getElementById("value").ldBar;
+	          var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
           }
         });
@@ -41,7 +41,7 @@
     <body>
       <h1>Make a circle</h1>
 	 <p
-	   //id = "value"
+	   id = "value"
 	 </p>
       <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
