Updated html index

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -40,8 +40,8 @@
     </head>
     <body>
       <h1>Make a circle</h1>
-	 <p
-	   id = "value"
+	 <p>
+	   //id = "value"
 	 </p>
       <h3 class="task_desc">Try and create a circle in 20 second or less</h3>
 
