Added printout of 'bar' value in index.html

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -28,6 +28,7 @@
             document.getElementById("value").setAttribute("data-value",json.orientation);
 	          var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
+            console.log(bar);
           }
         });
         </script>
