Expanded the requirements for orientation data to be used in loading bar

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -22,7 +22,7 @@
         });
         socket.on('orientation', function(dist_obj) {
           const json = JSON.parse(dist_obj);
-          if (json.orientation !== undefined) {
+          if (json.orientation !== undefined && json.orientation != 0 && json.orientation != 1) {
             document.getElementById("value").setAttribute("data-value",json.orientation);
 	          var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
