--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -22,11 +22,11 @@
         });
         socket.on('orientation', function(dist_obj) {
           const json = JSON.parse(dist_obj);
-          if (json.orientation !== undefined && json.orientation != 0 && json.orientation != 1) {
+          if (json.orientation !== undefined) {
             document.getElementById("value").setAttribute("data-value",json.orientation);
 	          var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
-            console.log(json);
+            console.log("data-value");
           }
         });
         </script>
