Tried printing out value

--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -26,7 +26,7 @@
             document.getElementById("value").setAttribute("data-value",json.orientation);
 	          var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
-            console.log("data-value");
+            console.log("value");
           }
         });
         </script>
