--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -51,9 +51,9 @@
           data-stroke="data:ldbar/res,gradient(0,1,#9df,#9fd,#df9,#fd9)"
         ></div>
 	<script>
-		var bar1 = new ldBar("#value2");
-		var bar2 = document.getElementById('value2').ldBar;
-		bar1.set(bar2);
+	//	var bar1 = new ldBar("#value2");
+	//	var bar2 = document.getElementById('value2').ldBar;
+	//	bar1.set(bar2);
 	</script>
         <div class="startWrapper">
           <button id="start" onclick="getVal()">Start Circle!</button>
