--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -25,7 +25,7 @@
           if (json.orientation !== undefined) {
 	          var bar = document.getElementById("value").ldBar;
             bar.set(json.orientation);
-            console.log("value");
+            console.log(json.orientation);
           }
         });
         </script>
