changed circle colors (test)

--- a/py/templates/test.html
+++ b/py/templates/test.html
@@ -5,6 +5,15 @@
 body {
   font: 10px sans-serif;
 }
+
+#chart .arc path {
+  fill: #34A853;
+}
+
+#chart .arc path:last-child {
+  fill: #FBBC05;
+}
+
 </style>
 <body>
   <button id="refresh">Refresh Data</button>
