--- a/py/templates/test.html
+++ b/py/templates/test.html
@@ -7,11 +7,11 @@ body {
 }
 
 #chart .arc path {
-  fill: #34A853;
+  fill: #34A853 !important;
 }
 
 #chart .arc path:last-child {
-  fill: #FBBC05;
+  fill: #FBBC05 !important;
 }
 
 </style>
