--- a/py/templates/test.html
+++ b/py/templates/test.html
@@ -8,6 +8,10 @@ body {
 
 #chart .arc path {
   fill: #34A853 !important;
+
+  text{
+    color: #34A853 !important;
+  }
 }
 
 #chart .arc path:last-child {
