--- a/py/templates/test.html
+++ b/py/templates/test.html
@@ -6,12 +6,12 @@ body {
   font: 10px sans-serif;
 }
 
-#chart g .arc path {
+#chart .arc path {
   fill: #34A853 !important;
 
 }
 
-#chart g .arc:last-child path {
+#chart .arc:last-child path {
   fill: #FBBC05 !important;
 }
 
