fixing the hell out of the js

--- a/py/templates/test.html
+++ b/py/templates/test.html
@@ -23,7 +23,7 @@ text{
   <button id="refresh">Refresh Data</button>
   <div id="chart"></div>
 <script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="http://bl.ocks.org/nnattawat/raw/9368297/d3.donut.js"></script>
+<script src="{{ url_for('static', filename='js/d3.donut.js') }}" language="JavaScript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
           integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
           crossorigin="anonymous"></script>
