--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -19,7 +19,7 @@
 			<button onclick="togglePieDoughnut()">Toggle Doughnut View</button>
 		</div>
 	</div>
-	<script>
+	<script type="text/javascript" charset="utf-8">
 
 			var socket = io();
 			socket.on('connect', function() {
