--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Scriptable > Pie | Chart.js sample</title>
-	<link rel="stylesheet" type="text/css" href="../style.css">
-	<script src="http://www.chartjs.org/dist/2.9.1/Chart.min.js"></script>
-	<script src="https://www.chartjs.org/samples/latest/utils.js"></script>
+	<link rel="stylesheet" type="text/css"
+				href="{{ url_for('static', filename='css/style.css') }}">
+	<script src="http://www.chartjs.org/dist/2.9.1/Chart.min.js" language="JavaScript"></script>
+	<script src="https://www.chartjs.org/samples/latest/utils.js" language="JavaScript"></script>
 </head>
 <body>
 	<div class="content">
