--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -9,6 +9,9 @@
 				href="{{ url_for('static', filename='css/style.css') }}">
 	<script src="http://www.chartjs.org/dist/2.9.1/Chart.min.js" language="JavaScript"></script>
 	<script src="https://www.chartjs.org/samples/latest/utils.js" language="JavaScript"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+	          integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
+	          crossorigin="anonymous"></script>
 	<script type="text/javascript" charset="utf-8">
 
 			var socket = io();
