--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -95,11 +95,11 @@
 			elements: {
 				arc: {
 					//backgroundColor: colorize.bind(null, false, false),
-					backgroundColor: 'rgba(52, 168, 83, 1)', 'rgba(147, 216, 163, 1)',
+					backgroundColor: 'rgba(52, 168, 83, 1)', 'rgba(147, 216, 163, 1)'
 					hoverBackgroundColor: hoverColorize
 				}
 			}
-		}; 
+		};
 
 		var chart = new Chart('chart-0', {
 			type: 'pie',
