--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -94,10 +94,7 @@
 			tooltips: false,
 			elements: {
 				arc: {
-					backgroundColor: [
-                'rgba(52, 168, 83, 1)',
-            		'rgba(147, 216, 163, 1)'
-							],
+					backgroundColor: ['rgba(52, 168, 83, 1)','rgba(147, 216, 163, 1)'],
 					// backgroundColor: colorize.bind(null, false, false),
 					// backgroundColor: 'rgba(52, 168, 83, 1)', 'rgba(147, 216, 163, 1)'
 					hoverBackgroundColor: hoverColorize
