--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 	<div class="content">
-		<div id='seconds-counter'> </div>
+		<div id="seconds-counter"> </div>
 		<div class="wrapper"><canvas id="chart-0"></canvas></div>
 		<div class="toolbar">
 			<button onclick="togglePieDoughnut()">Start Circle!</button>
