--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -40,24 +40,13 @@
 			});
 
 	</script>
-	<script>
-			window.setInterval((function(){
-		   var start = Date.now();
-		   var textNode = document.createTextNode('0');
-		   document.getElementById('seconds').appendChild(textNode);
-		   return function() {
-		        textNode.data = Math.floor((Date.now()-start)/1000);
-		        };
-		   }()), 1000);
-			 
-	</script>
+
 </head>
 <body>
 	<div class="content">
-		<p>You've been on this page for <span id=seconds></span> seconds.</p>
 		<div class="wrapper"><canvas id="chart-0"></canvas></div>
 		<div class="toolbar">
-			<button onclick="togglePieDoughnut()">Start Circle!</button>
+			<button id="startButton" onclick="togglePieDoughnut()">Start Circle!</button>
 		</div>
 	</div>
 
