--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -44,6 +44,7 @@
 </head>
 <body>
 	<div class="content">
+		<p> The download will begin in <span id="countdowntimer">10 </span> Seconds</p>
 		<div class="wrapper"><canvas id="chart-0"></canvas></div>
 		<div class="toolbar">
 			<button id="startButton" onclick="togglePieDoughnut()">Start Circle!</button>
@@ -141,6 +142,15 @@
 			chart.update();
 		}
 
+	</script>
+	<script type="text/javascript">
+	    var timeleft = 10;
+	    var downloadTimer = setInterval(function(){
+	    timeleft--;
+	    document.getElementById("countdowntimer").textContent = timeleft;
+	    if(timeleft <= 0)
+	        clearInterval(downloadTimer);
+	    },1000);
 	</script>
 </body>
 </html>
