--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -49,7 +49,7 @@
 
 		<div class="wrapper"><canvas id="chart-0"></canvas></div>
 		<div class="toolbar">
-			<button id="startButton" onclick="togglePieDoughnut(); document.getElementById('circleTimer').style.display = 'block';">Start Circle!</button>
+			<button id="startButton" onclick="togglePieDoughnut();">Start Circle!</button>
 			<p id="circleTimer" style="display: none"> You have <span id="countdowntimer">15 </span> seconds left!</p>
 		</div>
 	</div>
