--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -37,7 +37,7 @@
 
 						if(json.angle == -999 || json.angle == 999)  {
 								// full circle
-								startConfetti();
+								confetti.start()
 
 						}
  	 				});
