Updated completion actions

--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -38,7 +38,7 @@
 						if(json.angle == -999 || json.angle == 999)  {
 								// full circle
 								confetti.start()
-
+								json.angle = 100;
 						}
  	 				});
 
