--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -40,6 +40,7 @@
 								// full circle
 								confetti.start()
 								json.angle = 100;
+								dataset.data = [json.angle, 100 - json.angle];
 								active = false;
 						}
  	 				});
