--- a/py/templates/donut.html
+++ b/py/templates/donut.html
@@ -37,8 +37,7 @@
 
 						if(json.angle == -999 || json.angle == 999)  {
 								// full circle
-								confetti.start()
-
+								confetti.start();
 						}
  	 				});
 
